--- a/exercises/0-2-newspaper-article/brief.mdx
+++ b/exercises/0-2-newspaper-article/brief.mdx
@@ -1,3 +1,18 @@
+# Recria o artigo com os conhecimentos de html que adquiriste:
+
+## Objectivos:
+
+1 - Reproduzir estruturas de html do examplar.
+
+## Pontos a ter em conta:
+
+1 - Semântica.
+O HTML deve usar elementos semânticos apropriados para representar o conteúdo. Isso ajuda não apenas na compreensão do código, mas também na acessibilidade e no SEO.
+
+A boa utilização dos elementos certo permite ao browser entender questões de acessibilidade. Uma <div> não é um texto. um <p> não é uma imagem. Esta lógica permite ao browser entender
+
+### conteúdo
+
 date: March 24, 2023
 title: Bringing Hygge to Your Backyard: Easy Ways to Make Your Outdoor Space Cozy and Calm
 subtitle: Tips & Trendz
@@ -10,7 +25,6 @@ subtitle: What Is Hygge?
 Hygge, a Danish word pronounced “hyoo-gah,” is a lifestyle that embraces coziness and the calm of life. You want to feel comfortable in your own home, and following a [hygge lifestyle] [https://blog.smartfurniture.com/what-does-it-mean-to-live-a-hygge-lifestyle/] will let you relax — no more worrying about what other people may think about you or your home. You want your home to be welcoming and inviting, not necessarily look perfect on social media.
 
 To live a hygge lifestyle, all you need to do is prioritize human connection over gadgets or any other distractions. Building a comfortable home is the best way to focus on the things you love while avoiding the things that don’t make you happy. Focus on soft things that bring you comfort, and decorate every inch of your house with purpose — including your backyard.
-
 
 subtitle: Why Being Outdoors Is Great For You
 
@@ -30,7 +44,7 @@ With a soundproofed backyard, you can spend time outside without worrying about 
 
 You’ll add privacy to your backyard while ensuring you have plenty of clean air while outside. You can also opt for a fence to control some of the noise, making you a more responsible neighbor.
 
-video: 
+video:
 
 links:
 The Ultimate Guide to Making Your Very Own Backyard Oasis [https://blog.smartfurniture.com/the-ultimate-guide-to-making-your-very-own-backyard-oasis/]
@@ -41,17 +55,14 @@ Beyond Minimalism: Embracing Warmth and Comfort Through the Concept of Hygge [ht
 
 How to Prepare the Ultimate Backyard Hangout Just in Time for Spring [https://blog.smartfurniture.com/how-to-prepare-the-ultimate-backyard-hangout-just-in-time-for-spring/]
 
- 
-
-divider: 
+divider:
 Design Tips & Trendz
 
-author: 
+author:
 Smart Furniture
 thumbnail: https://secure.gravatar.com/avatar/83478b75ed51b4b0cbada65b872cce41?s=200&d=mm&r=g
 
-
-form: 
+form:
 label: Descritiopn
 tag: textarea
 isRequired: true
@@ -73,5 +84,5 @@ label: Save my name, email, and website in this browser for the next time I comm
 type: checkbox
 isRequired: true
 
-button: 
+button:
 label: Post a Comment
