chore: change docs

--- a/templates/1-0-css-design-systems/brief.mdx
+++ b/templates/1-0-css-design-systems/brief.mdx
@@ -54,7 +54,7 @@ element:last-child()
 
 // verifica a condição associada.
 element:has()
-// contemplate que o element, seja qual for, terá algo, por exemplo, um p? um input? um input::hover?
+// contempla que o element, seja qual for, terá algo, por exemplo, um p? um input? um input::hover?
 
 Por exemplo:
 
